# ComfyUI-DD-Nodes

./: README-EN.md  README.md  __init__.py  advanced_fusion.py  color_generator.py  dimension_calculator.py  image_to_video.py  model_optimizer.py  pyproject.toml  requirements.txt  sampling_optimizer.py  simple_latent.py  wan_latent.py
.github/: copilot-instructions.md
extensions/: index.js
extensions/Aspect_Ratio_Selector/: AspectRatioSelectorCore.js  AspectRatioSelectorExt.js  __init__.py  nodes.py
extensions/Intelligent Layout/: LayoutCore.js  LayoutExt.js
extensions/Intelligent_Layout/: LayoutCore.js  LayoutExt.js
extensions/Online Animation/: ConnectionAnimationCore.js  ConnectionAnimationExt.js
extensions/Online_Animation/: ConnectionAnimationCore.js  ConnectionAnimationExt.js
extensions/Prompt_Manager/: PromptManagerCore.js  PromptManagerExt.js  __init__.py  prompt_api.py  prompts.json
extensions/Qwen_MT/: QwenMTCore.js  QwenMTExt.js  __init__.py  api_routes.py  nodes.py
js/: index.js
js/Intelligent Layout/: LayoutCore.js  LayoutExt.js  coin.js  layoutAlgorithms.js  styles.js
js/Online Animation/: ConnectionAnimationCore.js  ConnectionAnimationExt.js
node/: advanced_fusion.py  color_generator.py  condition_switcher.py  dimension_calculator.py  image_resize.py  image_size_limiter.py  image_splitter.py  image_stroke.py  image_to_video.py  latent_switcher.py  mask_resize.py  model_optimizer.py  model_switcher.py  qwen_mt_translator.py  sampling_optimizer.py  simple_latent.py  txt_file_merger.py  video_frame_extractor.py  wan_latent.py
(+74 files in other folders)
