[project]
name = "comfyui-dd-nodes"
description = "Advanced utility nodes for ComfyUI with intelligent layout and animation features."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["git+https://github.com/1761696257/ComfyUI-DD-Nodes.git"]

[project.urls]
Repository = "https://github.com/1761696257/ComfyUI-DD-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "1761696257"
DisplayName = "ComfyUI-DD-Nodes"
Icon = ""
