[project]
name = "comfyui-dd-nodes"
description = "Advanced utility nodes for ComfyUI with intelligent layout and animation features."
version = "2.4.1"
license = {file = "LICENSE"}
dependencies = ["git+https://github.com/Dontdrunk/ComfyUI-DD-Nodes.git"]

[project.urls]
Repository = "https://github.com/Dontdrunk/ComfyUI-DD-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Dontdrunk"
DisplayName = "ComfyUI-DD-Nodes"
Icon = ""
